Final touches to have version 1 actually functional. Still missing the database script though!

--- a/Html2Pdf/Html2Pdf.csproj
+++ b/Html2Pdf/Html2Pdf.csproj
@@ -154,6 +154,8 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="itextsharp.dll" />
+    <Content Include="Readme.txt" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Properties\PublishProfiles\John-winhost.pubxml" />
