--- a/TournamentTreeApp/Web.config
+++ b/TournamentTreeApp/Web.config
@@ -30,8 +30,8 @@
     <add key="pdfPrintUrl" value="http://localhost:38540/?uri={0}"/>
     <!--<add key="html2pdf" value="http://danix.cloudapp.net/html2pdf/print/printDoc"/>-->
     <!--<add key="html2pdf" value="http://localhost:29396/Print/PrintDoc"/>-->    
-    <!--<add key="html2pdf" value="http://localhost/html2pdf/Print/PrintDoc"/>-->
-    <add key="html2pdf" value="http://www.tournament-trees.com/html2pdf/print/printDoc"/>    
+    <add key="html2pdf" value="http://localhost/html2pdf/Print/PrintDoc"/>
+    <!--<add key="html2pdf" value="http://www.tournament-trees.com/html2pdf/print/printDoc"/>-->    
     <!--end added by dev-->
   </appSettings>
   <system.web>
