--- a/IdentityManager/Web.config
+++ b/IdentityManager/Web.config
@@ -61,8 +61,8 @@
   </runtime>
 <connectionStrings>
     <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=IdentityManager-2-1-alpha1;Integrated Security=SSPI" providerName="System.Data.SqlClient" />-->
-  <!--<add name="DefaultConnection" connectionString="Data source=datacenter;initial catalog=TournamentTreeApp;persist security info=True;user id=sa;password=!Kuzea1309;" providerName="System.Data.SqlClient" />-->
-  <add name="DefaultConnection" connectionString="Data source=tcp:s12.winhost.com;initial catalog=DB_105476_tournament;persist security info=True;user id=DB_105476_tournament_user;password=OCbJqlnY6JNLCT;" providerName="System.Data.SqlClient" />  
+  <add name="DefaultConnection" connectionString="Data source=datacenter;initial catalog=TournamentTreeApp;persist security info=True;user id=sa;password=!Kuzea1309;" providerName="System.Data.SqlClient" />
+  <!--<add name="DefaultConnection" connectionString="Data source=tcp:s12.winhost.com;initial catalog=DB_105476_tournament;persist security info=True;user id=DB_105476_tournament_user;password=OCbJqlnY6JNLCT;" providerName="System.Data.SqlClient" />-->  
   <!--<add name="DefaultConnection" connectionString="Data source=datacenter;initial catalog=SecurityTest;persist security info=True;user id=sa;password=!Kuzea1309;" providerName="System.Data.SqlClient" />-->
 </connectionStrings><appSettings>
     <add key="owin:AppStartup" value="IdentitySample.Startup,IdentityManager" />
