--- a/TournamentTreeApp/TournamentTreeApp.csproj
+++ b/TournamentTreeApp/TournamentTreeApp.csproj
@@ -228,10 +228,12 @@
       <DependentUpon>jquery.bracket.john.css</DependentUpon>
     </Content>
     <Content Include="Content\jquery.bracket.min.css" />
+    <Content Include="DatabaseDDL\TournamentTreeApp.sql" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="readme.txt" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Properties\PublishProfiles\john-winhost.pubxml" />
