Upgrade script from first version to 1.1

--- a/TournamentTreeApp/TournamentTreeApp.csproj
+++ b/TournamentTreeApp/TournamentTreeApp.csproj
@@ -229,6 +229,7 @@
     </Content>
     <Content Include="Content\jquery.bracket.min.css" />
     <Content Include="DatabaseDDL\TournamentTreeApp.sql" />
+    <Content Include="DatabaseDDL\upgrade_tables.sql" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
