Config changes specific to the VM in Azure cloud

--- a/TournamentTreeApp/Web.config
+++ b/TournamentTreeApp/Web.config
@@ -13,9 +13,9 @@
   <connectionStrings>
     <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-TKDTournaments-20160517112002.mdf;Initial Catalog=aspnet-TKDTournaments-20160517112002;Integrated Security=True"
       providerName="System.Data.SqlClient" />-->
-    <add name="DefaultConnection" connectionString="Data source=.;initial catalog=TournamentTreeApp;persist security info=True;user id=sa;password=!Kuzea1309;" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data source=localhost;initial catalog=TournamentTreeApp;persist security info=True;user id=sa;password=!Watertown2015;"providerName="System.Data.SqlClient" />
     <!--<add name="DefaultConnection" connectionString="Data source=tcp:s12.winhost.com;initial catalog=DB_105476_tournament;persist security info=True;user id=DB_105476_tournament_user;password=OCbJqlnY6JNLCT;" providerName="System.Data.SqlClient" />-->
-    <add name="TournamentTreeAppEntities" connectionString="metadata=res://*/BracketTournamentModel.csdl|res://*/BracketTournamentModel.ssdl|res://*/BracketTournamentModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=TournamentTreeApp;persist security info=True;user id=sa;password=!Kuzea1309;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="TournamentTreeAppEntities" connectionString="metadata=res://*/BracketTournamentModel.csdl|res://*/BracketTournamentModel.ssdl|res://*/BracketTournamentModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=TournamentTreeApp;persist security info=True;user id=sa;password=!Watertown2015;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <!--<add name="TournamentTreeAppEntities" connectionString="metadata=res://*/BracketTournamentModel.csdl|res://*/BracketTournamentModel.ssdl|res://*/BracketTournamentModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=tcp:s12.winhost.com;initial catalog=DB_105476_tournament;persist security info=True;user id=DB_105476_tournament_user;password=OCbJqlnY6JNLCT;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
   </connectionStrings>
   <appSettings>
@@ -23,15 +23,15 @@
     <add key="webpages:Enabled" value="false"/>
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
-    
+
     <!--added by dev-->
-   <add key="aspnet:MaxJsonDeserializerMembers" value="150000" />
+    <add key="aspnet:MaxJsonDeserializerMembers" value="150000" />
     <add key="vs:EnableBrowserLink" value="false" />
     <add key="pdfPrintUrl" value="http://localhost:38540/?uri={0}"/>
     <!--<add key="html2pdf" value="http://danix.cloudapp.net/html2pdf/print/printDoc"/>-->
-    <!--<add key="html2pdf" value="http://localhost:29396/Print/PrintDoc"/>-->    
+    <!--<add key="html2pdf" value="http://localhost:29396/Print/PrintDoc"/>-->
     <add key="html2pdf" value="http://localhost/html2pdf/Print/PrintDoc"/>
-    <!--<add key="html2pdf" value="http://www.tournament-trees.com/html2pdf/print/printDoc"/>-->    
+    <!--<add key="html2pdf" value="http://www.tournament-trees.com/html2pdf/print/printDoc"/>-->
     <!--end added by dev-->
   </appSettings>
   <system.web>
