--- a/TournamentTreeApp/TournamentTreeApp.csproj
+++ b/TournamentTreeApp/TournamentTreeApp.csproj
@@ -238,6 +238,7 @@
     <Content Include="readme.txt" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <None Include="Properties\PublishProfiles\ftp v1.1.pubxml" />
     <None Include="Properties\PublishProfiles\john-winhost.pubxml" />
     <None Include="Properties\PublishProfiles\winhost.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
