--- a/TournamentTreeApp/Web.config
+++ b/TournamentTreeApp/Web.config
@@ -7,16 +7,16 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework"
-      type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
-      requirePermission="false"/>
+             type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
+             requirePermission="false"/>
   </configSections>
   <connectionStrings>
     <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-TKDTournaments-20160517112002.mdf;Initial Catalog=aspnet-TKDTournaments-20160517112002;Integrated Security=True"
-      providerName="System.Data.SqlClient" />-->
-    <add name="DefaultConnection" connectionString="Data source=.;initial catalog=TournamentTreeApp;persist security info=True;user id=sa;password=!Kuzea1309;" providerName="System.Data.SqlClient" />
-    <!--<add name="DefaultConnection" connectionString="Data source=tcp:s12.winhost.com;initial catalog=DB_105476_tournament;persist security info=True;user id=DB_105476_tournament_user;password=OCbJqlnY6JNLCT;" providerName="System.Data.SqlClient" />-->
-    <add name="TournamentTreeAppEntities" connectionString="metadata=res://*/BracketTournamentModel.csdl|res://*/BracketTournamentModel.ssdl|res://*/BracketTournamentModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=TournamentTreeApp;persist security info=True;user id=sa;password=!Kuzea1309;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <!--<add name="TournamentTreeAppEntities" connectionString="metadata=res://*/BracketTournamentModel.csdl|res://*/BracketTournamentModel.ssdl|res://*/BracketTournamentModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=tcp:s12.winhost.com;initial catalog=DB_105476_tournament;persist security info=True;user id=DB_105476_tournament_user;password=OCbJqlnY6JNLCT;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+      providerName="System.Data.SqlClient"/>-->
+    <!--<add name="DefaultConnection" connectionString="Data source=datacenter;initial catalog=TournamentTreeApp;persist security info=True;user id=sa;password=!Kuzea1309;"providerName="System.Data.SqlClient"/>-->
+    <add name="DefaultConnection" connectionString="Data source=tcp:s12.winhost.com;initial catalog=DB_105476_tournament;persist security info=True;user id=DB_105476_tournament_user;password=OCbJqlnY6JNLCT;" providerName="System.Data.SqlClient"/>
+    <!--<add name="TournamentTreeAppEntities" connectionString="metadata=res://*/BracketTournamentModel.csdl|res://*/BracketTournamentModel.ssdl|res://*/BracketTournamentModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DATACENTER;initial catalog=TournamentTreeApp;persist security info=True;user id=sa;password=!Kuzea1309;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>-->
+    <add name="TournamentTreeAppEntities" connectionString="metadata=res://*/BracketTournamentModel.csdl|res://*/BracketTournamentModel.ssdl|res://*/BracketTournamentModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=tcp:s12.winhost.com;initial catalog=DB_105476_tournament;persist security info=True;user id=DB_105476_tournament_user;password=OCbJqlnY6JNLCT;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
@@ -25,18 +25,18 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
     
     <!--added by dev-->
-   <add key="aspnet:MaxJsonDeserializerMembers" value="150000" />
+    <add key="aspnet:MaxJsonDeserializerMembers" value="150000" />
     <add key="vs:EnableBrowserLink" value="false" />
     <add key="pdfPrintUrl" value="http://localhost:38540/?uri={0}"/>
     <!--<add key="html2pdf" value="http://danix.cloudapp.net/html2pdf/print/printDoc"/>-->
-    <!--<add key="html2pdf" value="http://localhost:29396/Print/PrintDoc"/>-->    
-    <add key="html2pdf" value="http://localhost/html2pdf/Print/PrintDoc"/>
-    <!--<add key="html2pdf" value="http://www.tournament-trees.com/html2pdf/print/printDoc"/>-->    
+    <!--<add key="html2pdf" value="http://localhost:29396/Print/PrintDoc"/>-->
+    <!--<add key="html2pdf" value="http://localhost/html2pdf/Print/PrintDoc"/>-->
+    <add key="html2pdf" value="http://www.tournament-trees.com/html2pdf/print/printDoc"/>
     <!--end added by dev-->
   </appSettings>
   <system.web>
     <authentication mode="None"/>
-    <compilation debug="true" targetFramework="4.5.2"/>
+    <compilation targetFramework="4.5.2"/>
     <httpRuntime targetFramework="4.5.2"/>
     <trust level="Full"/>
   </system.web>
@@ -49,7 +49,7 @@
       <remove name="OPTIONSVerbHandler"/>
       <remove name="TRACEVerbHandler"/>
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler"
-        preCondition="integratedMode,runtimeVersionv4.0"/>
+           preCondition="integratedMode,runtimeVersionv4.0"/>
     </handlers>
   </system.webServer>
   <runtime>
@@ -109,11 +109,11 @@
   <system.codedom>
     <compilers>
       <compiler language="c#;cs;csharp" extension=".cs"
-        type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
-        warningLevel="4" compilerOptions="/langversion:6 /nowarn:1659;1699;1701"/>
+                type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
+      warningLevel="4" compilerOptions="/langversion:6 /nowarn:1659;1699;1701"/>
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb"
-        type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
-        warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
+                type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
+    warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
     </compilers>
   </system.codedom>
 </configuration>
